core/src/snapshots/suo_parser_core__tokenizer__tests__Escaped String.snap
---
source: core/src/tokenizer.rs
expression: vec
---
[
    Token {
        kind: StringLiteral,
        value: Some(
            "\"",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 1,
                offset: 0,
            },
            end: Position {
                line: 1,
                column: 5,
                offset: 4,
            },
        },
        range: (
            0,
            4,
        ),
    },
]
