core/src/snapshots/suo_parser_core__tokenizer__tests__Quoted String.snap
---
source: core/src/tokenizer.rs
expression: vec
---
[
    Token {
        kind: StringLiteral,
        value: Some(
            "name",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 1,
                offset: 0,
            },
            end: Position {
                line: 1,
                column: 7,
                offset: 6,
            },
        },
        range: (
            0,
            6,
        ),
    },
]
