core/src/snapshots/suo_parser_core__tokenizer__tests__String Mixup.snap
---
source: core/src/tokenizer.rs
expression: vec
---
[
    Token {
        kind: StringLiteral,
        value: Some(
            "I'm",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 1,
                offset: 0,
            },
            end: Position {
                line: 1,
                column: 6,
                offset: 5,
            },
        },
        range: (
            0,
            5,
        ),
    },
    Token {
        kind: StringLiteral,
        value: Some(
            "str\"ing",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 7,
                offset: 6,
            },
            end: Position {
                line: 1,
                column: 16,
                offset: 15,
            },
        },
        range: (
            6,
            15,
        ),
    },
]
