core/src/snapshots/suo_parser_core__tokenizer__tests__Sync Netsync Command.snap
---
source: core/src/tokenizer.rs
expression: vec
---
[
    Token {
        kind: Keyword,
        value: Some(
            "Ability",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 1,
                offset: 0,
            },
            end: Position {
                line: 1,
                column: 8,
                offset: 7,
            },
        },
        range: (
            0,
            7,
        ),
    },
    Token {
        kind: Brace,
        value: Some(
            "{",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 9,
                offset: 8,
            },
            end: Position {
                line: 1,
                column: 10,
                offset: 9,
            },
        },
        range: (
            8,
            9,
        ),
    },
    Token {
        kind: Identifier,
        value: Some(
            "id",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 11,
                offset: 10,
            },
            end: Position {
                line: 1,
                column: 13,
                offset: 12,
            },
        },
        range: (
            10,
            12,
        ),
    },
    Token {
        kind: Colon,
        value: Some(
            ":",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 13,
                offset: 12,
            },
            end: Position {
                line: 1,
                column: 14,
                offset: 13,
            },
        },
        range: (
            12,
            13,
        ),
    },
    Token {
        kind: StringLiteral,
        value: Some(
            "1000",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 15,
                offset: 14,
            },
            end: Position {
                line: 1,
                column: 21,
                offset: 20,
            },
        },
        range: (
            14,
            20,
        ),
    },
    Token {
        kind: Punctuator,
        value: Some(
            ",",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 21,
                offset: 20,
            },
            end: Position {
                line: 1,
                column: 22,
                offset: 21,
            },
        },
        range: (
            20,
            21,
        ),
    },
    Token {
        kind: Identifier,
        value: Some(
            "name",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 23,
                offset: 22,
            },
            end: Position {
                line: 1,
                column: 27,
                offset: 26,
            },
        },
        range: (
            22,
            26,
        ),
    },
    Token {
        kind: Colon,
        value: Some(
            ":",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 27,
                offset: 26,
            },
            end: Position {
                line: 1,
                column: 28,
                offset: 27,
            },
        },
        range: (
            26,
            27,
        ),
    },
    Token {
        kind: StringLiteral,
        value: Some(
            "name",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 29,
                offset: 28,
            },
            end: Position {
                line: 1,
                column: 35,
                offset: 34,
            },
        },
        range: (
            28,
            34,
        ),
    },
    Token {
        kind: Brace,
        value: Some(
            "}",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 36,
                offset: 35,
            },
            end: Position {
                line: 1,
                column: 37,
                offset: 36,
            },
        },
        range: (
            35,
            36,
        ),
    },
]
